# leengine

./: .gitignore  CMakeLists.txt  LICENSE  build.fox  license  readme.md
examples/00-helloworld/: main.c
src/: buttons.c  buttons.h  filesystem.c  filesystem.h  filesystem_android.c  filesystem_ios.m  physics.c  physics.h  physics_debug.c  physics_debug.h  render.c  render.h  render_9slice.c  render_9slice.h  render_batch.c  render_batch.h  render_text.c  render_text.h  scene.c  scene.h  scrollview.c  scrollview.h  sound.c  sound.h  spine.c  spine.h  text.c  text.h  transforms.c  transforms.h  window.c  window.h
src/helpers/: dict.c  dict.h  khash_uuid.h  pool.h  portable.c  portable.h  pstrstream.c  pstrstream.h
src/shaders/: tex_color.fs  tex_color.vs  varying.def.sc
tools/: localization_csv_to_c.py  packer.py  requirements.txt  slice.py
tools/emscripten-template/: index.html
